Fix description and minor style issues on author detail page.
Fix content detail to look more like authors header

Improve content detail header

Fix read me and details buttons

nitpicky css fixes

Add a little extra spacing to author name

--- a/galaxyui/src/app/content-detail/cards/versions/versions.component.less
+++ b/galaxyui/src/app/content-detail/cards/versions/versions.component.less
@@ -23,6 +23,8 @@
         color: @white;
         padding: 2px;
         border-bottom: 4px solid @white;
+        padding: 5px;
+        
     }
     .name {
         background-color: @blue;
